# fundadministration

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
deploy/launchd/: cloudflared.config.example.yml  com.fundadmin.portfolio-sync.plist  com.fundadmin.streamlit.plist
scripts/: backfill_archive.py  backfill_history.py  export_x_cust_rpt.py  migrate_from_marketanalysis.py  run_cli.ps1  run_cli.sh  run_portfolio_sync.sh  run_streamlit.sh
src/fundadmin/: __init__.py  __main__.py  cli.py
src/fundadmin/clients/: __init__.py  cli.py  config.py  schema.py  store.py
src/fundadmin/clients/compute/: __init__.py  client_nav.py
src/fundadmin/clients/ingest/: __init__.py  client_nav.py  portfolio_excel.py
src/fundadmin/clients/pages/: __init__.py  client_nav_page.py  portfolio_page.py
src/fundadmin/core/: __init__.py  config.py  logging.py  paths.py
src/fundadmin/db/: __init__.py  engine.py
src/fundadmin/notifications/: __init__.py  email.py
src/fundadmin/portfolio/: __init__.py  by_broker_email.py  client_notifier.py  cross_broker_report.py  email_filters.py  maintenance.py  notifier.py  operations.py  reconcile.py  viz.py
src/fundadmin/portfolio/parsers/: __init__.py  cicc.py  citic.py  common.py  swhysc.py  trades.py  valuation_nav.py
tests/: test_clients_store.py  test_per_broker_positions.py  test_transactions_and_reconcile.py
