[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundadmin"
version = "0.1.0"
description = "FundAdministration — 基金运营（客户/产品净值/持仓/净值通知），从 MarketAnalysis 剥离的独立、自包含系统"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# 仅当需要从 MySQL projectx.x_cust_rpt 导入客户清单时安装
mysql = ["pymysql>=1.1"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
fundadmin = "fundadmin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
